⚡️ Add fallback on main font & fix header shift

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -69,10 +69,10 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  background: white;
 }
 
 main {
-  margin-top: var(--header-height);
   flex-grow: 1;
 }
 
